--- a/NameCaseLib/NameCaseLib.csproj
+++ b/NameCaseLib/NameCaseLib.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net40</TargetFrameworks>
     <Authors>Andriy Chaika</Authors>
